--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nebulae/backend-node-tools": "^0.2.6",
+    "@nebulae/keycloak-admin-client": "^1.1.0",
     "dateformat": "^4.5.1",
     "jshint": "^2.13.1",
     "lodash": "^4.17.21",
